<resources>
    <string name="app_name">Movie Library</string>
    <string name="unknown">unknown</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="goback">Return</string>
    <string name="homepage_custom_genre_tag_title">Custom Genre</string>
    <string name="homepage_custom_genre_tag_title_2">Genre Sort</string>
    <string name="genre_tag_sortmode_tips_mouse">Hold down the left mouse button and drag the theme to adjust the sorting</string>
    <string name="genre_tag_enter_sortmode_tips_dpad">Long press OK to enter sorting mode</string>
    <string name="genre_tag_exit_sortmode_tips_dpad">Press Back to exit sort mode</string>
    <string name="added_genretags_reached_upper_limit">Unable to add more tags because the added tags have reached the upper limit!</string>
    <string name="history_list_title">Recently Played</string>
    <string name="history_list_empty">No watch history</string>
    <string name="category_list_title">Category Browse</string>
    <string name="recently_added_list_title">Recently Added</string>
    <string name="my_favorite_list_title">Favorite</string>
    <string name="recommand_list_title">Recommend</string>
    <string name="unknown_file_list_title">Unknown Files</string>
    <string name="category_all">All</string>
    <string name="category_movie">Movie</string>
    <string name="category_tv">TV Series</string>
    <string name="category_unmatched">Unmatched</string>
    <string name="category_favorite">Favorite</string>
    <string name="genre_edit_dialog_title">Category</string>
    <string name="lb_sort_device">Device</string>
    <string name="lb_sort_region">Region</string>
    <string name="lb_sort_directory">Directory</string>
    <string name="lb_sort_year">Year</string>
    <string name="lb_sort_type">Type</string>
    <string name="lb_sort_by">Sort by</string>
    <string name="lb_sort_genres">Genres</string>
    <string name="order_name">Title</string>
    <string name="order_genre">Genre</string>
    <string name="order_year">Year</string>
    <string name="order_score">Score</string>
    <string name="order_addtime">Add Time</string>
    <string name="order_recently_played">Recently Played</string>
    <string name="all">All</string>
    <string name="filter_box_local_device">LOCAL</string>
    <string name="filter_box_dlna_device">DLNA</string>
    <string name="filter_box_smb_device">SMB</string>
    <string name="filterpage_no_result_matched">No results matching your filter criteria.</string>
    <string name="filterpage_no_movie">No movies have been added to the library.</string>
    <string name="filterpage_resulttext_1">According to the conditions of</string>
    <string name="filterpage_resulttext_2">, a total of</string>
    <string name="filterpage_resulttext_3">films were selected.Row </string>
    <string name="filterpage_resulttext_4"></string>
    <string name="add_shortcut">Add</string>
    <string name="shortcut_manager">Device</string>
    <string name="shortcut_state_unscanned">UnScanned</string>
    <string name="shortcut_state_scanned">Scanned</string>
    <string name="shortcut_state_scanning">Scanning</string>
    <string name="scanning_in_background">Scanning video in Background</string>
    <string name="shortcut_scan_dialog_item_shortcut_type">Movie Type</string>
    <string name="shortcut_scan_dialog_item_shortcut_access">Access Rights</string>
    <string name="shortcut_scan_dialog_item_shortcut_name">Friendly Name</string>
    <string name="shortcut_scan_dialog_confirm">Scan</string>
    <string name="shortcut_options_dialog_remove">Remove</string>
    <string name="shortcut_options_dialog_rescan">Rescan</string>
    <string name="shortcut_options_dialog_quick_scan">Quick Scan</string>
    <string name="shortcut_remove_dialog_content">Remove folder %s?</string>
    <string name="errtips_device_not_found">Rescanning device, please try again later!</string>
    <string name="errtips_no_playback_source">No playback source, you can use Station Links to add playback source</string>
    <string name="shortcut_type_auto">Auto</string>
    <string name="shortcut_type_movie">Movie</string>
    <string name="shortcut_type_tv">TV Series</string>
    <string name="shortcut_type_child">Cartoon</string>
    <string name="shortcut_type_variety_show">Variety Show</string>
    <string name="shortcut_type_animate">Animate</string>
    <string name="shortcut_access_adult_only">Adult Only</string>
    <string name="shortcut_access_all_ages">All Ages</string>
    <string name="shortcut_name_default">Default</string>
    <string name="shortcut_name_editdialog_title">Edit Name</string>
    <string name="shortcut_name_editdialog_hint">Please enter a name</string>
    <string name="director">Directors</string>
    <string name="actors">Characters</string>
    <string name="plot_s">Overview</string>
    <string name="plot_expand">View More</string>
    <string name="plot_fold">Fold</string>
    <string name="plot_s_empty">No introduction.</string>
    <string name="btn_play">Play</string>
    <string name="btn_play_resume">Resume</string>
    <string name="btn_play_episode">Episode %1$d</string>
    <string name="btn_play_episode_2">No. %1$s</string>
    <string name="btn_favorite">Like</string>
    <string name="btn_expand">More</string>
    <string name="btn_edit">Update</string>
    <string name="btn_delete">Remove</string>
    <string name="label_recommend_video">Recommendations</string>
    <string name="recommand_empty">No recommendations.</string>
    <string name="actor_list">Characters</string>
    <string name="video_list">Paths</string>
    <string name="edit_title">Select Poster</string>
    <string name="select_videosource">Choose Video to Play</string>
    <string name="toast_del_success">Delete Success!</string>
    <string name="toast_UnknownHostException">Network error!</string>
    <string name="toast_newsearh_notfound">Sorry,no results were found.Please check your input or try other keywords</string>
    <string name="toast_loadmore_end">No more results found.</string>
    <string name="toast_selectmovie_faild">Sorry, failed to match this poster!</string>
    <string name="toast_selectmovie_getdetial_faild">Sorry, failed to get the details of this movie!</string>
    <string name="toast_player_error">%1$s can\'t play this video</string>
    <string name="remove_confirm">Are you sure about cleaning up the poster info?</string>
    <string name="childmode">Child Mode</string>
    <string name="search">Search</string>
    <string name="homepage">Home</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="tab_homepage">Home</string>
    <string name="video_type_movie">Movie</string>
    <string name="video_type_tv">TV</string>
    <string name="video_type_undefine">Unknown</string>
    <string name="video_type_cartoon">Cartoon</string>
    <string name="video_type_animate">Animate</string>
    <string name="video_type_variety_show">Variety Show</string>
    <string name="video_type_other">Other</string>
    <string name="video_type_all_file">Files</string>
    <string name="tab_local_search_all">All (%d)</string>
    <string name="tab_local_search_movie">Movie (%d)</string>
    <string name="tab_local_search_tv">TV Series (%d)</string>
    <string name="remote_movie_sync_tips">The data has been modified</string>
    <string name="remote_remove_movie_sync_tips">Removed the relationship between posters and files!</string>
    <string name="settings_childmode">Child Mode</string>
    <string name="settings_poster">Poster</string>
    <string name="settings_preference">Preference</string>
    <string name="settings_about">About</string>
    <string name="childmode_switch_tips">Turn on Child Mode will hide content that is not suitable for children</string>
    <string name="childmode_changepsw_subtitle">Child Mode > Change Password</string>
    <string name="childmode_temp_close">Close kid mode</string>
    <string name="title_change_password">Change Password</string>
    <string name="label_confirm_psw">Confirm Password:</string>
    <string name="label_old_psw">Old Password:</string>
    <string name="label_new_psw">New Password:</string>
    <string name="errtips_psw_invaild">* Password must be 4 digits</string>
    <string name="errtips_psw_error">* Password error</string>
    <string name="errtips_psw_not_new">* The new password cannot be the same as the original password</string>
    <string name="errtips_psw_inconsistent">* The two passwords do not match</string>
    <string name="hint_enter_psw">Please enter your password (default password is 1111)</string>
    <string name="hint_enter_psw_2">Please enter your password</string>
    <string name="hint_input4digit_psw">Please enter a new 4-digit password</string>
    <string name="hint_confirm_new_psw">Please enter new password again</string>
    <string name="title_input_psw">Enter Password</string>
    <string name="psw_set_success">New password set successfully!</string>
    <string name="state_on">ON</string>
    <string name="state_off">OFF</string>
    <string name="settings_poster_show_title">Title</string>
    <string name="settings_poster_show_poster">Poster</string>
    <string name="settings_poster_show_ratings">Ratings</string>
    <string name="settings_poster_show_like">Like</string>
    <string name="settings_poster_show_cornermark">Corner Mark</string>
    <string name="settings_poster_preview">Preview</string>
    <string name="sample_title" translatable="false">*****</string>
    <string name="sample_tag" translatable="false">HD</string>
    <string name="sample_rating" translatable="false">10.0</string>
    <string name="settings_preference_autosearch_title">Auto Scan Local Folders</string>
    <string name="settings_preference_default_searchmode">Default search mode</string>
    <string name="settings_preference_default_player">Default Player</string>
    <string name="settings_preference_system_player">System VideoPlayer</string>
    <string name="settings_preference_only_for_local">*Only support local video</string>
    <string name="settings_preference_homepage_recently_played_action">Actions For Recently Played</string>
    <string name="settings_preference_homepage_recently_played_action_play_now">Play now</string>
    <string name="settings_preference_homepage_recently_played_action_open_video_details">Open video details</string>
    <string name="settings_about_source">Poster Source</string>
    <string name="settings_about_version">Version</string>
    <string name="postermenu_reselect_poster">Rematch the poster</string>
    <string name="postermenu_mark_as_watched">Mark as watched</string>
    <string name="postermenu_mark_as_like">Like</string>
    <string name="postermenu_clear_poster">Clean up the poster</string>
    <string name="postermenu_add_to_videotag">Add to tag</string>
    <string name="unknowfilemenu_playmovie">Play</string>
    <string name="unknowfilemenu_reselect_poster">Select a poster</string>
    <string name="refresh_text">Loading</string>
    <string name="tx_search_input_hint">Please enter a keyword</string>
    <string name="local_search_empty_tips">The search results are empty, please check your input</string>
    <string name="hint">Please input a keyword</string>
    <string name="device_internal_storage">Internal Storage</string>
    <string name="device_udisk_name">U-Disk (%1$s)</string>
    <string name="device_sdcard_name">TFCard (%1$s)</string>
    <string name="device_ssd_name">M.2 SSD (%1$s)</string>
    <string name="device_harddisk_name">HardDisk (%1$s)</string>
    <string name="device_smb">SMB Device</string>
    <string name="device_DLNA">DLNA Device</string>
    <string name="homepage_empty">There is nothing here!</string>
    <string name="homepage_goto_add_shortcut">Add videos to library</string>
</resources>