<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="empty_type"
            type="Integer" />
        <variable
            name="count"
            type="String" />
    </data>

    <RelativeLayout
        android:background="@drawable/new_main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_filter"
            style="@style/homepage_circle_btn_style"
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/btn_home"
            android:drawableLeft="@drawable/icon_circle_filter"
            android:text="@string/filter" />

        <Button
            android:id="@+id/btn_home"
            style="@style/homepage_circle_btn_style"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="72dp"
            android:drawableLeft="@drawable/icon_circle_home"
            android:text="@string/homepage" />

        <TextView
            android:visibility="@{empty_type==0?View.VISIBLE:View.GONE}"
            android:id="@+id/tv_result_count"
            android:layout_alignBottom="@id/btn_home"
            android:layout_marginLeft="86dp"
            android:textSize="20sp"
            android:fontFamily="monospace"
            android:text="@{count}"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="@{empty_type==1?View.VISIBLE:View.GONE}"
            android:id="@+id/tv_nomovie"
            android:layout_centerInParent="true"
            android:text="@string/filterpage_no_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="@{empty_type==2?View.VISIBLE:View.GONE}"
            android:id="@+id/tv_nomatched"
            android:layout_centerInParent="true"
            android:text="@string/filterpage_no_result_matched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.hphtv.movielibrary.ui.view.TvRecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_result_count"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="-5dp"
            android:visibility="@{empty_type==0?View.VISIBLE:View.GONE}" />
    </RelativeLayout>
</layout>