<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.hphtv.movielibrary.roomdb.entity.relation.MovieWrapper"></import>
        <import type="android.text.TextUtils"/>
        <import type="android.view.View"/>
        <variable
            name="wrapper"
            type="com.hphtv.movielibrary.roomdb.entity.relation.MovieWrapper" />
        <variable
            name="expand"
            type="boolean" />
        <variable
            name="unmatch"
            type="boolean" />
        <variable
            name="recommand"
            type="boolean" />
        <variable
            name="viewmore"
            type="boolean" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nest_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bg_color_end">
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_stagephoto"
                    android:layout_width="1065dp"
                    android:scaleType="matrix"
                    android:foreground="@drawable/stagephoto_fg"
                    android:layout_alignParentEnd="true"
                    android:layout_height="605dp" />
                <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/view_main"
                android:layout_width="match_parent"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="68dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@{wrapper.movie.title}"
                    android:textSize="36sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@{wrapper.movie.ratings}"
                    android:textColor="@color/detail_rating_textcolor"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_marginTop="11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:id="@+id/view_tags"
                    android:layout_marginTop="21dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></LinearLayout>
                <LinearLayout
                    android:layout_marginTop="33dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginRight="23dp"
                        android:text="@string/director"
                        style="@style/common_label_text_style" />

                    <TextView
                        android:layout_marginRight="23dp"
                        android:text="@{wrapper.toDirectorString()}"
                        style="@style/common_content_text_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginRight="23dp"
                        android:text="@string/actors"
                        style="@style/common_label_text_style" />

                    <TextView
                        android:layout_marginEnd="23dp"
                        android:text="@{wrapper.toActorString()}"
                        style="@style/common_content_text_style" />
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/common_label_text_style"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="23dp"
                        android:text="@string/plot_s" />

                    <TextView
                        android:layout_marginRight="23dp"
                        android:maxWidth="466dp"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:text="@{wrapper.movie.plot}"
                        style="@style/common_content_text_style" />

                    <TextView
                        android:id="@+id/tv_more"
                        style="@style/common_content_text_style"
                        android:text="@string/plot_expand"
                        android:gravity="center"
                        android:drawableRight="@drawable/icon_new_more"
                        android:layout_gravity="bottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@drawable/icon_close_tint"
                        app:drawableTint="@drawable/icon_close_tint" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="45dp"
                    android:id="@+id/constraintLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/detail_btn_style"
                        android:id="@+id/btn_play"
                        android:text="@string/btn_play"
                        android:drawableLeft="@drawable/ic_btn_play_drawable"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_favorite"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:visibility="@{!unmatch?View.VISIBLE:View.GONE}"
                        android:id="@+id/btn_favorite"
                        android:text="@string/btn_favorite"
                        style="@style/detail_btn_style"
                        android:drawableLeft="@drawable/ic_btn_like_drawable"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_edit"
                        app:layout_constraintStart_toEndOf="@id/btn_play"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:visibility="@{expand||unmatch?View.VISIBLE:View.GONE}"
                        android:id="@+id/btn_edit"
                        android:text="@string/btn_edit"
                        style="@style/detail_btn_style"
                        android:drawableLeft="@drawable/ic_update"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_remove"
                        app:layout_constraintStart_toEndOf="@id/btn_favorite"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:visibility="@{!unmatch&amp;&amp;expand?View.VISIBLE:View.GONE}"
                        android:id="@+id/btn_remove"
                        android:text="@string/btn_delete"
                        android:drawableLeft="@drawable/ic_remove"
                        style="@style/detail_btn_style"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/btn_expand"
                        app:layout_constraintStart_toEndOf="@id/btn_edit"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:visibility="@{unmatch?View.GONE:View.VISIBLE}"
                        android:id="@+id/btn_expand"
                        android:text="@{expand?@string/plot_fold:@string/btn_expand}"
                        style="@style/detail_btn_style"
                        android:drawableLeft="@{expand?@drawable/ic_fold:@drawable/ic_btn_more}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_remove"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_marginTop="80dp"
                    android:textStyle="bold"
                    style="@style/common_content_text_style"
                    android:text="@string/label_recommandvideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                 </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.recyclerview.widget.RecyclerView
                    android:visibility="@{!recommand?View.GONE:View.VISIBLE}"
                    android:layout_marginTop="25dp"
                    android:id="@+id/rv_recommand"
                    android:layout_below="@id/view_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:visibility="@{recommand?View.GONE:View.VISIBLE}"
                    android:layout_marginTop="72dp"
                    android:layout_centerHorizontal="true"
                    style="@style/common_content_text_style"
                    android:text="@string/recommand_empty"
                    android:layout_below="@id/view_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>