<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/view_childmode"
            style="@style/setting_item_size"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="170dp"
            android:background="@drawable/new_common_tab_bg">

            <TextView
                android:id="@+id/tv_childmode"
                style="@style/common_content_text_style"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="26dp"
                android:text="@string/childmode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:layout_toStartOf="@id/switch_childmode"
                android:layout_toEndOf="@id/tv_childmode"
                android:autoSizeTextType="uniform"
                android:gravity="right"
                android:lines="1"
                android:text="@string/childmode_switch_tips"
                android:textColor="#AAAAAA"
                android:textSize="20sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_childmode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="23dp"
                android:checked="@={childmode}"
                android:clickable="false"
                android:focusable="false"
                app:thumbTint="@color/white"
                app:track="@drawable/common_switch_track" />
        </RelativeLayout>

        <View
            android:layout_width="786dp"
            android:layout_height="1dp"
            android:layout_marginLeft="101dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:background="#1AFFFFFF" />
        <TextView
            android:id="@+id/tv_changepsw"
            android:layout_marginLeft="75dp"
            android:text="@string/title_change_password"
           style="@style/setting_item_clickable"/>
    </LinearLayout>

    <data>

        <import type="androidx.databinding.ObservableBoolean" />

        <variable
            name="childmode"
            type="ObservableBoolean" />

    </data>
</layout>