<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:visibility="@{isLoading?View.GONE:hasHistory||recentAdd||recommand?View.VISIBLE:View.GONE}">

            <TextView
                android:id="@+id/tv_history_title"
                style="@style/homepage_head_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/history_list_title"
                android:visibility="@{hasHistory?View.VISIBLE:View.GONE}" />

            <com.hphtv.movielibrary.ui.view.TvRecyclerView
                android:id="@+id/rv_history_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{hasHistory?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/tv_recently_added"
                style="@style/homepage_head_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recently_added_list_title"
                android:visibility="@{recentAdd?View.VISIBLE:View.GONE}" />

            <com.hphtv.movielibrary.ui.view.TvRecyclerView
                android:id="@+id/rv_recently_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{recentAdd?View.VISIBLE:View.GONE}" />


            <TextView
                android:id="@+id/tv_recommand"
                style="@style/homepage_head_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/recommand_list_title"
                android:visibility="@{recommand?View.VISIBLE:View.GONE}" />

            <com.hphtv.movielibrary.ui.view.TvRecyclerView
                android:id="@+id/rv_recommand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{recommand?View.VISIBLE:View.GONE}" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isLoading?View.GONE:!(hasHistory||recentAdd||recommand)?View.VISIBLE:View.GONE}">

            <ImageView
                android:id="@+id/iv_empty"
                android:layout_width="158dp"
                android:layout_height="131dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="165dp"
                android:src="@mipmap/empty_img" />

            <TextView
                android:id="@+id/tv_empty_tips_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_empty"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/homepage_empty"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_quick_add_shortcut"
                style="@style/common_content_s_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_empty_tips_1"
                android:layout_centerInParent="true"
                android:layout_marginTop="13dp"
                android:background="@{VideoType.child.equals(type)?@drawable/new_common_spinner_child_bg:@drawable/new_common_spinner_bg}"
                android:focusedByDefault="true"
                android:padding="15dp"
                android:text="@string/homepage_goto_add_shortcut" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{isLoading?View.VISIBLE:View.GONE}">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp"
                android:background="@{VideoType.child.equals(type)?@drawable/loading_view_child_bg:@drawable/loading_view_bg}"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                android:minWidth="60dp"
                android:minHeight="60dp"
                android:padding="30dp"
                app:SpinKit_Color="@color/white_light" />
        </RelativeLayout>
    </RelativeLayout>

    <data>

        <import type="android.view.View" />

        <import type="com.hphtv.movielibrary.data.Constants.VideoType" />

        <variable
            name="recentAdd"
            type="boolean" />

        <variable
            name="recommand"
            type="boolean" />

        <variable
            name="hasHistory"
            type="boolean" />

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="type"
            type="VideoType" />
    </data>
</layout>